Improved: further improved login process

--- a/src/pages/popover-home/popover-home.html
+++ b/src/pages/popover-home/popover-home.html
@@ -1,5 +1,5 @@
 <ion-list>
-  <ion-item (click)="logout()" item-center>
+  <ion-item (click)="logout()">
     <ion-icon name="log-out"></ion-icon>
     <span>Logout</span>
   </ion-item>
