Improved: Added list product API

--- a/src/pages/customer-category-list/customer-category-list.html
+++ b/src/pages/customer-category-list/customer-category-list.html
@@ -16,7 +16,7 @@
           <img src="./assets/imgs/productcategory.png">
         </ion-avatar>
         <span>{{category.name}}</span>
-        <button ion-button clear item-end><h1><ion-icon md="md-arrow-round-forward"></ion-icon></h1></button>
+        <button ion-button clear color="secondary" item-end><h1><ion-icon md="md-arrow-round-forward"></ion-icon></h1></button>
       </button>
     </ion-list>
 </ion-content>
