Implemented: Added list order page

--- a/src/pages/customer-list-product/customer-list-product.html
+++ b/src/pages/customer-list-product/customer-list-product.html
@@ -21,14 +21,14 @@
         <ion-card-header text-center>
           <ion-row>
             <ion-col text-center>
-              <ion-icon name="cube"></ion-icon>
-              <strong>{{product.name}}</strong>
+              <ion-icon name="cube" color="grey"></ion-icon>
+              <span>{{product.name}}</span>
             </ion-col>
           </ion-row>
           <ion-row>
             <ion-col text-center>
-              <ion-icon name="cash"></ion-icon>
-              <strong>{{product.price}} ZK</strong>
+              <ion-icon name="cash" color="grey"></ion-icon>
+              Price (ZK): <span>{{product.price}}</span>
             </ion-col>
           </ion-row>
         </ion-card-header>
