--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -7,25 +7,29 @@
     <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
-    <ion-card>
+    <ion-card style="overflow-x:auto;">
       <table>
-          <tr>
-            <th>Name</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Sub Total</th>
-          </tr>
-          <tr *ngFor="let item of cartItems">
-            <td>{{item.name}}</td>
-            <td>{{item.quantity}}</td>
-            <td>{{item.price}} ZK</td>
-            <td>{{(item.price) * (item.quantity)}} ZK</td>
-          </tr>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Quantity</th>
+              <th>Price (ZK)</th>
+              <th>Sub Total (ZK)</th>
+              </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of cartItems">
+              <td>{{item.name}}</td>
+              <td>{{item.quantity}}</td>
+              <td>{{item.price}}</td>
+              <td>{{(item.price) * (item.quantity)}}</td>
+            </tr>
+          </tbody>
         </table>
         <ion-row>
           <ion-col text-center>
             <ion-icon name="cash"></ion-icon>
-            <span>Order Total: {{orderTotal}} ZK</span>
+            <span>Order Total (ZK): {{orderTotal}}</span>
           </ion-col>
         </ion-row>
         <ion-row>
