--- a/src/pages/customer-category-list/customer-category-list.html
+++ b/src/pages/customer-category-list/customer-category-list.html
@@ -11,12 +11,15 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-list *ngIf="categoryListAvailable">
-      <button ion-item *ngFor="let category of childCategoryList" (click)="getProducts(category['_id'])">
-        <ion-avatar item-start>
-          <img src="./assets/imgs/productcategory.png">
-        </ion-avatar>
-        <span>{{category.name}}</span>
-        <button ion-button clear color="secondary" item-end><h1><ion-icon md="md-arrow-round-forward"></ion-icon></h1></button>
-      </button>
-    </ion-list>
+    <button ion-item *ngFor="let category of childCategoryList" (click)="getProducts(category['_id'])">
+      <ion-avatar item-start>
+        <img src="./assets/imgs/productcategory.png">
+      </ion-avatar>
+      <span>{{category.name}}</span>
+      <button ion-button clear color="secondary" item-end><h1><ion-icon md="md-arrow-round-forward"></ion-icon></h1></button>
+    </button>
+  </ion-list>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
