--- a/src/pages/customer-list-product/customer-list-product.html
+++ b/src/pages/customer-list-product/customer-list-product.html
@@ -52,6 +52,9 @@
           </ion-row>
         </ion-card-content>
       </ion-card>
+      <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content></ion-infinite-scroll-content>
+      </ion-infinite-scroll>
     </ion-list>
   </ion-content>
   
