Improved: Added pagination on list order page

--- a/src/pages/customer-list-order/customer-list-order.html
+++ b/src/pages/customer-list-order/customer-list-order.html
@@ -34,5 +34,8 @@
           </tr>
         </tbody>
       </table>
+      <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content></ion-infinite-scroll-content>
+      </ion-infinite-scroll>
     </ion-card>
 </ion-content>
