Improved: Add user, category and product

--- a/src/pages/customer-category-list/customer-category-list.html
+++ b/src/pages/customer-category-list/customer-category-list.html
@@ -10,7 +10,7 @@
   <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  <ion-list *ngIf="categoryListAvailable">
+  <ion-list *ngIf="categoryListAvailable && (childCategoryList.length > 0)">
     <button ion-item *ngFor="let category of childCategoryList" (click)="getProducts(category['_id'])">
       <ion-avatar item-start>
         <img src="./assets/imgs/productcategory.png">
@@ -19,6 +19,11 @@
       <button ion-button clear color="secondary" item-end><h1><ion-icon md="md-arrow-round-forward"></ion-icon></h1></button>
     </button>
   </ion-list>
+  <ion-card *ngIf="categoryListAvailable && (childCategoryList.length < 1)">
+    <ion-card-header text-center>
+      <h4>No record found</h4>
+    </ion-card-header>
+  </ion-card>
   <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
