--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -13,8 +13,8 @@
             <tr>
               <th>Name</th>
               <th>Quantity</th>
-              <th>Price (ZK)</th>
-              <th>Sub Total (ZK)</th>
+              <th>Price (ZMW)</th>
+              <th>Sub Total (ZMW)</th>
               </tr>
           </thead>
           <tbody>
@@ -28,7 +28,7 @@
         </table>
         <ion-row>
           <ion-col text-center>
-              <button ion-button outline color="grey"><ion-icon name="cash"></ion-icon> Order Total (ZK): {{orderTotal}}</button>
+              <button ion-button outline color="grey"><ion-icon name="cash"></ion-icon> Order Total (ZMW): {{orderTotal}}</button>
           </ion-col>
         </ion-row>
         <ion-row>
