--- a/src/pages/add-user/add-user.html
+++ b/src/pages/add-user/add-user.html
@@ -4,5 +4,109 @@
   </ion-navbar>
 </ion-header>
 <ion-content class="full-background">
-
+  <ion-card>
+    <ion-card-header text-center>Add User
+      <!-- <ion-icon name="happy"></ion-icon> -->
+    </ion-card-header>
+    <ion-card-content>
+      <ion-grid>
+          <ion-row>
+            <ion-col>
+              <ion-list>
+                  <ion-item>
+                    <ion-label><ion-icon md="md-happy" padding-right class="primary-color-icon"></ion-icon>User Type</ion-label>
+                    <ion-select [(ngModel)]="selectedUserType" interface="popover" (ngModelChange)="onUserTypeSelect()">
+                      <ion-option *ngFor="let user of userTypeList" [value]="user">{{user}}</ion-option>
+                    </ion-select>
+                  </ion-item>
+                </ion-list>
+            </ion-col>  
+            <ion-col *ngIf="showCustomerForm">
+              <form [formGroup]="addCustomerForm">
+                <ion-item>
+                    <ion-label floating>Name</ion-label>
+                    <ion-input type="text" formControlName="name"></ion-input>
+                </ion-item>
+                  <ion-item *ngIf="name.hasError('required') && name.touched">
+                  <p style="color: red">name is required*</p>
+                </ion-item>
+                <ion-item>
+                  <ion-label floating>User Login Id</ion-label>
+                  <ion-input type="text" formControlName="userLoginId"></ion-input>
+                </ion-item>
+                <ion-item *ngIf="userLoginId.hasError('required') && userLoginId.touched">
+                  <p style="color: red">User Login Id is required*</p>
+                </ion-item>
+                <ion-item>
+                  <ion-label floating>Password</ion-label>
+                  <ion-input type="text" formControlName="password"></ion-input>
+                </ion-item>
+                  <ion-item *ngIf="password.hasError('required') && password.touched">
+                  <p style="color: red">password  is required*</p>
+                </ion-item>
+                <ion-item>
+                  <ion-label floating>Country</ion-label>
+                  <ion-input type="text" formControlName="country"></ion-input>
+                </ion-item>
+                <ion-item *ngIf="country.hasError('required') && country.touched">
+                  <p style="color: red">country is required*</p>
+                </ion-item>
+                <ion-item>
+                  <ion-label floating>Channel</ion-label>
+                  <ion-input type="text" formControlName="channel"></ion-input>
+                </ion-item>
+                <ion-item *ngIf="channel.hasError('required') && channel.touched">
+                  <p style="color: red">channel is required*</p>
+                </ion-item>
+                <ion-item>
+                  <ion-label floating>Province</ion-label>
+                  <ion-input type="text" formControlName="province"></ion-input>
+                </ion-item>
+                <ion-item *ngIf="province.hasError('required') && province.touched">
+                  <p style="color: red">province is required*</p>
+                </ion-item>
+                <ion-item>
+                  <ion-label floating>Customer Code</ion-label>
+                  <ion-input type="text" formControlName="externalId"></ion-input>
+                </ion-item>
+                  <ion-item *ngIf="externalId.hasError('required') && externalId.touched">
+                  <p style="color: red">customer code is required*</p>
+                </ion-item>
+                <ion-grid>
+                  <button ion-button color="secondary" [disabled]="!(addCustomerForm.valid)" (click)="createUser('customer');">Add Customer<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+                </ion-grid>
+              </form>
+            </ion-col>
+            <ion-col *ngIf="!showCustomerForm">
+              <form [formGroup]="addAdminForm">
+                <ion-item>
+                  <ion-label floating>Name</ion-label>
+                  <ion-input type="text" formControlName="name"></ion-input>
+                </ion-item>
+                  <ion-item *ngIf="name.hasError('required') && name.touched">
+                  <p style="color: red">name is required*</p>
+                </ion-item>
+                <ion-item>
+                  <ion-label floating>User Login Id</ion-label>
+                  <ion-input type="text" formControlName="userLoginId"></ion-input>
+                </ion-item>
+                <ion-item *ngIf="userLoginId.hasError('required') && userLoginId.touched">
+                  <p style="color: red">User Login Id is required*</p>
+                </ion-item>
+                <ion-item>
+                  <ion-label floating>Password</ion-label>
+                  <ion-input ype="text" formControlName="password"></ion-input>
+                </ion-item>
+                  <ion-item *ngIf="password.hasError('required') && password.touched">
+                  <p style="color: red">password  is required*</p>
+                </ion-item>
+                <ion-grid>
+                  <button ion-button color="secondary" [disabled]="!(addAdminForm.valid)" (click)="createUser('admin');">Add Admin<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+                </ion-grid>
+              </form>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
