--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -1,18 +1,51 @@
 <ion-header>
-    <ion-navbar>
-      <button ion-button menuToggle>
-        <ion-icon name="menu"></ion-icon>
+  <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Orders List</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="presentPopover($event)">
+        <ion-icon name="more"></ion-icon>
       </button>
-      <ion-title>Orders List</ion-title>
-      <ion-buttons end>
-        <button ion-button icon-only (click)="presentPopover($event)">
-          <ion-icon name="more"></ion-icon>
-        </button>
-      </ion-buttons>
-    </ion-navbar>
-  </ion-header>
-
-
-<ion-content padding>
-
+    </ion-buttons>
+  </ion-navbar>
+</ion-header>
+<ion-content class="full-background">
+  <div class="search-spinner">
+    <ion-spinner name="crescent" *ngIf="!orderListAvailable"></ion-spinner>
+  </div>
+  <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <ion-card *ngIf="orderListAvailable && (orderList.length > 0)" style="overflow-x:auto;">
+    <table>
+      <thead>
+        <tr>
+          <th>Cust.Name</th>
+          <th>Date</th>
+          <th>Total (ZMW)</th>
+          <th>Status</th>
+          <th>Detail</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let order of orderList; let i = index">
+          <td>{{order.userDetail.name}} [{{order.userDetail.externalId}}]</td>
+          <td>{{order.lastUpdatedAt}}</td>
+          <td>{{order.orderTotal}}</td>
+          <td>{{order.status}}</td>
+          <td><button ion-button clear color="secondary" item-end (click)="getOrderDetial(order)">view</button></td>
+        </tr>
+      </tbody>
+    </table>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+  </ion-card>
+  <ion-card *ngIf="orderListAvailable && (orderList.length < 1)">
+    <ion-card-header text-center>
+      <h4>No record found</h4>
+    </ion-card-header>
+  </ion-card>
 </ion-content>
