--- a/src/pages/customer-home/customer-home.html
+++ b/src/pages/customer-home/customer-home.html
@@ -19,7 +19,7 @@
   <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  <ion-list *ngIf="categoryListAvailable">
+  <ion-list *ngIf="categoryListAvailable && (parentCategoryList.length > 0)">
     <button ion-item *ngFor="let category of parentCategoryList" (click)="getChildCategory(category['_id'])">
       <ion-avatar item-start>
         <img src="./assets/imgs/productcategory.png">
@@ -28,6 +28,11 @@
       <button ion-button clear color="secondary" item-end><h1><ion-icon md="md-arrow-round-forward"></ion-icon></h1></button>
     </button>
   </ion-list>
+  <ion-card *ngIf="categoryListAvailable && (parentCategoryList.length < 1)">
+    <ion-card-header text-center>
+      <h4>No record found</h4>
+    </ion-card-header>
+  </ion-card>
   <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
