--- a/src/pages/customer-list-order/customer-list-order.html
+++ b/src/pages/customer-list-order/customer-list-order.html
@@ -19,7 +19,7 @@
           <tr>
             <th>S.No</th>
             <th>Date</th>
-            <th>Total (ZK)</th>
+            <th>Total (ZMW)</th>
             <th>Status</th>
             <th>Detail</th>
           </tr>
