--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -15,25 +15,30 @@
             <th>S.No</th>
             <th>Name</th>
             <th>Quantity</th>
-            <th>Price (ZK)</th>
-            <th>Sub Total (ZK)</th>
+            <th>Price (ZMW)</th>
+            <th>Sub Total (ZMW)</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let item of orderItems; let i = index">
             <td>{{(i+1)}}</td>
-            <td>{{item.name}}</td>
+            <td>{{item.productDetail.name}} [{{item.productDetail.productCode}}]</td>
             <td>{{item.quantity}}</td>
-            <td>{{item.price}}</td>
-            <td>{{(item.quantity) * (item.price)}}</td>
+            <td>{{item.productDetail.price}}</td>
+            <td>{{(item.quantity) * (item.productDetail.price)}}</td>
           </tr>
         </tbody>
       </table>
       <ion-row>
         <ion-col text-center>
-          <button ion-button outline color="grey"><ion-icon name="cash"></ion-icon> Order Total (ZK): {{orderDetail.orderTotal}}</button>
+          <button ion-button outline color="grey"><ion-icon name="cash"></ion-icon> Order Total (ZMW): {{orderDetail.orderTotal}}</button>
         </ion-col>
       </ion-row>
+      <ion-row>
+          <ion-col text-center>
+            <button ion-button primary color="secondary" (click)="importOrder()"><ion-icon name="arrow-dropdown-circle"></ion-icon> Import Order<ion-spinner name="dots" *ngIf="showLoginLoader"></ion-spinner></button>
+          </ion-col>
+        </ion-row>
     </ion-card>
 
 </ion-content>
