Improved: minor changes

--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -39,5 +39,10 @@
           <button ion-button primary color="secondary" (click)="importOrder()"><ion-icon name="arrow-dropdown-circle"></ion-icon> Import Order<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
         </ion-col>
       </ion-row>
+      <ion-row *ngIf="showCsvButton">
+        <ion-col text-center>
+          <button ion-button primary color="secondary" (click)="exportToCsv()"><ion-icon name="arrow-dropdown-circle"></ion-icon> Export to csv<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+        </ion-col>
+        </ion-row>
     </ion-card>
 </ion-content>
