--- a/src/pages/customer-list-product/customer-list-product.html
+++ b/src/pages/customer-list-product/customer-list-product.html
@@ -3,7 +3,7 @@
       <ion-title>Product List</ion-title>
       <ion-buttons end>
         <button ion-button icon-only (click)="reviewAndSubmitOrder()">
-          <h4>{{cartQuantity}}</h4>
+          <h4>{{cart.length}}</h4>
           <ion-icon name="cart"></ion-icon>
         </button>
       </ion-buttons>
@@ -28,27 +28,35 @@
           <ion-row>
             <ion-col text-center>
               <ion-icon name="cash" color="grey"></ion-icon>
-              Price (ZMW): <span>{{product.price}}</span>
+              Price: <span>{{product.price}} ZMW</span>
             </ion-col>
           </ion-row>
         </ion-card-header>
         <ion-card-content>
           <ion-row>
-            <ion-col text-center>
-              <button ion-button color="accent" outline style="color: black!important;">
-                <ion-input item-start type="text" placeholder="Qty" #qty></ion-input>
-              </button>
+            <ion-col col-12>
+              <ion-row>
+                <ion-col col-2 text-left>
+                  <button ion-button clear icon-only (click)="(product.quantity = decrementQty(product.quantity))"><ion-icon name="remove-circle" ></ion-icon></button>
+                </ion-col>
+                <ion-col col-2>
+                  <ion-input item-start type="text" placeholder="Quantity" [(ngModel)]="product.quantity" #qty></ion-input>
+                </ion-col>
+                <ion-col col-2 text-left>
+                  <button ion-button clear icon-only (click)="(product.quantity = incrementQty(product.quantity))"><ion-icon name="add-circle" ></ion-icon></button>
+                </ion-col>
+                <ion-col col-6 text-right>
+                  <button ion-button color="secondary" (click)="addToCart(product, product.quantity)" style="color: white!important;">
+                    <strong><ion-icon name="cart"></ion-icon>Add</strong>
+                  </button>
+                </ion-col>
+              </ion-row>
             </ion-col>
-            <ion-col text-right>
-              <button ion-button color="secondary" (click)="addToCart(product, qty.value)" style="color: white!important;">
-                <strong><ion-icon name="cart"></ion-icon>Add</strong>
-              </button>
-            </ion-col>
-            <ion-col text-right>
+            <!-- <ion-col text-right>
               <button ion-button color="light" (click)="removeFromCart(product)">
                 <strong><ion-icon name="trash"></ion-icon></strong>
               </button>
-            </ion-col>
+            </ion-col> -->
           </ion-row>
         </ion-card-content>
       </ion-card>
