--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -15,6 +15,7 @@
               <th>Quantity</th>
               <th>Price (ZMW)</th>
               <th>Sub Total (ZMW)</th>
+              <th>Action</th>
               </tr>
           </thead>
           <tbody>
@@ -23,6 +24,11 @@
               <td>{{item.quantity}}</td>
               <td>{{item.price}}</td>
               <td>{{(item.subTotal)}}</td>
+              <td>
+                <button icon-only ion-button color="light" (click)="removeFromCart(item)">
+                  <strong><ion-icon name="trash"></ion-icon></strong>
+                </button>
+              </td>
             </tr>
           </tbody>
         </table>
