--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -27,7 +27,7 @@
             <td>{{(i+1)}}</td>
             <td>{{item.productDetail.name}} [{{item.productDetail.productCode}}]</td>
             <td>{{item.quantity}}</td>
-            <td>{{item.productDetail.price}}</td>
+            <td>{{item.price}}</td>
             <td>{{(item.subTotal)}}</td>
           </tr>
         </tbody>
