--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -11,7 +11,7 @@
   <div class="search-spinner">
     <ion-spinner name="crescent" *ngIf="!orderItemsAvailable"></ion-spinner>
   </div>
-  <ion-card style="overflow-x:auto;" *ngIf="orderItemsAvailable">
+  <!-- <ion-card style="overflow-x:auto;" *ngIf="orderItemsAvailable">
       <table>
         <thead>
           <tr>
@@ -34,7 +34,7 @@
       </table>
       <ion-row>
         <ion-col text-center>
-          <!-- <button ion-button outline color="grey"><ion-icon name="cash"></ion-icon> Order Total (ZMW): {{orderDetail.orderTotal}}</button> -->
+          <button ion-button outline color="grey"><ion-icon name="cash"></ion-icon> Order Total (ZMW): {{orderDetail.orderTotal}}</button> 
           <strong><ion-icon name="cash"></ion-icon> Order Total: {{orderDetail.orderTotal}} ZMW</strong>
         </ion-col>
       </ion-row>
@@ -48,5 +48,45 @@
           <button ion-button primary color="secondary" (click)="exportToCsv()"><ion-icon name="arrow-dropdown-circle"></ion-icon> Export to csv<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
         </ion-col>
         </ion-row>
-    </ion-card>
+    </ion-card> -->
+    <ion-list>
+      <ion-card class="sticky-custom">
+        <ion-card-header text-center>
+          <strong><ion-icon name="cash"></ion-icon> Order Total: {{orderDetail.orderTotal}} ZMW</strong>
+        </ion-card-header>
+      </ion-card>
+      <ion-card *ngFor="let item of orderItems">
+        <ion-card-content>
+          <ion-row>
+            <ion-col text-center>
+              <ion-icon name="cube" color="grey"></ion-icon>
+              <span>{{item.productDetail.name}} [{{item.productDetail.productCode}}]</span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col text-center>
+              Quantity: {{item.quantity}}
+            </ion-col>
+            <ion-col text-center>
+              <ion-icon name="cash" color="grey"></ion-icon>
+              <span>Price: {{item.price}} ZMW</span>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12 text-center>
+              <ion-icon name="cash" color="grey"></ion-icon>
+              <span>SubTotal: {{item.subTotal}} ZMW</span>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
+  </ion-list>
 </ion-content>
+<ion-footer>
+  <ion-row>
+    <ion-col text-center>
+      <button *ngIf="showCsvButton" ion-button primary color="light" (click)="exportToCsv()"><ion-icon name="arrow-dropdown-circle"></ion-icon> Export to csv<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+      <button *ngIf="showImportOrder" ion-button primary color="secondary" (click)="importOrder()"><ion-icon name="arrow-dropdown-circle"></ion-icon> Import Order<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+    </ion-col>
+  </ion-row>
+</ion-footer>
