--- a/src/pages/customer-list-order/customer-list-order.html
+++ b/src/pages/customer-list-order/customer-list-order.html
@@ -13,7 +13,7 @@
     <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
       <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
-    <ion-card *ngIf="orderListAvailable" style="overflow-x:auto;">
+    <!-- <ion-card *ngIf="orderListAvailable" style="overflow-x:auto;">
       <table>
         <thead>
           <tr>
@@ -37,5 +37,36 @@
       <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
       </ion-infinite-scroll>
+    </ion-card> -->
+    <ion-card *ngFor="let order of orderList">
+      <ion-card-content>
+        <ion-row>
+          <ion-col text-center>
+              <ion-icon color="grey" name="cart"></ion-icon> Order Id: {{order.orderId}}
+          </ion-col>
+        </ion-row>
+          <ion-row>
+            <ion-col text-center>
+                <ion-icon color="grey" name="calendar"></ion-icon>
+                Date: {{order.lastUpdatedAt}}
+            </ion-col>
+            <ion-col text-center>
+                <ion-icon color="grey" name="cash"></ion-icon> Total: {{order.orderTotal}} ZMW
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12 text-center> 
+              <ion-icon color="grey" name="podium"></ion-icon>Status: {{order.status}}
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-12 text-center>
+              <button ion-button outline color="secondary" item-end (click)="getOrderDetial(order)">view order</button>
+            </ion-col>
+          </ion-row>
+      </ion-card-content>
     </ion-card>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 </ion-content>
